<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:id="@+id/number_of_question_text_view"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:id="@+id/question_text_view"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/radio_group_text_view">

            <RadioButton
                style="@style/radio"
                android:id="@+id/option_a_text_view"
                android:text="@string/answer1" />

            <RadioButton
                android:id="@+id/option_b_text_view"
                android:text="@string/answer2"
                style="@style/radio"/>

            <RadioButton
                android:id="@+id/option_c_text_view"
                android:text="@string/answer3"
                style="@style/radio"/>

            <RadioButton
                android:id="@+id/option_d_text_view"
                android:text="@string/answer4"
                style="@style/radio"/>

        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edit_text_view"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/editHint"
            android:inputType="textCapWords"
            android:textSize="16sp"
            android:onClick="onRadioButtonClicked"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/checkbox_wrapper">

            <CheckBox
                android:id="@+id/checkbox1_text_view"
                android:text="@string/checkbox1"
                style="@style/checkbox"/>

            <CheckBox
                android:id="@+id/checkbox2_text_view"
                android:text="@string/checkbox2"
                style="@style/checkbox"/>

            <CheckBox
                android:id="@+id/checkbox3_text_view"
                android:text="@string/checkbox3"
                style="@style/checkbox"/>

            <CheckBox
                android:id="@+id/checkbox4_text_view"
                android:text="@string/checkbox4"
                style="@style/checkbox"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/background"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:id="@+id/next_button_text_view"
            android:onClick="onNextButtonClicked"/>

    </LinearLayout>

</ScrollView>